<resources>
    <string name="server_address">https://gf38.host.cs.st-andrews.ac.uk/epeg</string>
    <string name="app_name">ePeg</string>
    <string name="action_settings">Settings</string>
    <string name="peg_text">PEG</string>
    <string name="start_single_player_button">Start Experiment!</string>
    <string name="start_multi_player_button">Multi Player!</string>
    <string name="stop_button">Stop</string>
    <string name="experiment_id_extra">EXPERIMENT_ID</string>
    <string name="experiment_is_righthanded_extra">EXPERIMENT_RIGHTHANDED</string>
    <string name="title_activity_study">StudyActivity</string>
    <string name="study_info">Welcome to the ePeg experiment!</string>
    <string name="hand_prompt">What hand do you use to write?</string>
    <string name="left_hand_button">Left</string>
    <string name="right_hand_button">Right</string>
    <string name="setup_info">Please place the pegs in the top row!</string>
    <string name="setup_complete_button">Start trial!</string>
    <string name="trial_info"></string>
    <string name="cancel_button">Restart this trial</string>
    <string name="end_study_button">Click here to print your reward label!</string>
    <string name="study_end">Thank you very much for your participation!</string>
    <string name="demo_button">Demo</string>
    <string name="arrow">Arrow</string>
    <string name="settings">Settings</string>
    <string name="add_new">Add new…</string>
    <string name="researcher_settings_popup_prompt">Please set a researcher and clinic!</string>
    <string name="participant_code">Participant code: %s</string>
    <string name="trial_status">%1$d/%2$d trials complete!</string>
    <string name="start">Start!</string>
    <string name="wrong_peg">Wrong peg!</string>
    <string name="trial_in_progress">Trial in progress…</string>
    <string name="place_peg">Place the peg in the hole…</string>
    <string name="lift_peg">Lift the peg from the hole…</string>
    <string name="clinic_code">Select the clinic code:</string>
    <string name="researcher">Select the researcher:</string>
    <string name="done">Done</string>
    <string name="researcher_hint">Researcher name</string>
    <string name="clinic_code_hint">Clinic code</string>
    <string name="new_clinic_code_message">Add new clinic code:</string>
    <string name="new_researcher_message">Add new researcher:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="participantCodeSeen">Done</string>
    <string name="start_button">Setup next trial!</string>
    <string name="waiting_for_other_player">Waiting for other player…</string>
    <string name="see_results">Experiment completed! Click here for your results to appear on the big screen!</string>
    <string name="ethical_consent_text">By proceeding you consent to your data being anonymously collected for research purposes. This project has been approved by the University of St Andrews Ethics Committee. For inquiries, visit: http://www.st-andrews.ac.uk/utrec/guidelinespolicies/complaints/</string>
    <string name="tablet_rotation_toggle_info">Should the tablet rotate?</string>
    <string name="is_the_tablet_in_landscape_mode">Is the tablet in landscape mode?</string>
    <string name="calculating_btn_text">Calculating...</string>
</resources>
