<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/info_center_row"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:weightSum="1">


    <Button
        android:id="@+id/show_settings"
        android:layout_width="474dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="50dp"
        android:onClick="startSingleStudy"
        android:text="@string/start_single_player_button" />

    <TextView
        android:id="@+id/study_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/show_settings"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/info_padding"
        android:text="@string/study_info"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/info_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/show_settings"
        android:text="@string/ethical_consent_text"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/info_text_size" />

</RelativeLayout>
